deploymentservice.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: your-app-deployment
spec:
  selector:
    matchLabels:
      app: your-app
  replicas: 2
  template:
    metadata:
      labels:
        app: your-app
    spec:
      containers:
        - name: your-app-container
          image: your-image:tag # Replace with your Docker image name and tag
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: your-app-service
spec:
  selector:
    app: your-app
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  type: NodePort
