ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  rules:
    - host: 192.168.1.135
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkinskubernetes-service
                port:
                  number: 8080
